--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,7 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      - name: install wget
+        run: apt-get install wget
+      - name : fetch google from wget
+        run : wget https://google.com
